; ModuleID = '/home/carl/AnghaBench/xhyve/src/vmm/io/extr_vhpet.c_vhpet_stop_timer.c'
source_filename = "/home/carl/AnghaBench/xhyve/src/vmm/io/extr_vhpet.c_vhpet_stop_timer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vhpet = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i64, i32 }

@.str = private unnamed_addr constant [17 x i8] c"hpet t%d stopped\00", align 1
@.str.1 = private unnamed_addr constant [50 x i8] c"hpet t%d interrupt triggered after stopping timer\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.vhpet*, i32, i64)* @vhpet_stop_timer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vhpet_stop_timer(%struct.vhpet* %0, i32 %1, i64 %2) #0 {
  %4 = alloca %struct.vhpet*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  store %struct.vhpet* %0, %struct.vhpet** %4, align 8
  store i32 %1, i32* %5, align 4
  store i64 %2, i64* %6, align 8
  %7 = load %struct.vhpet*, %struct.vhpet** %4, align 8
  %8 = getelementptr inbounds %struct.vhpet, %struct.vhpet* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 8
  %10 = load i32, i32* %5, align 4
  %11 = call i32 @VM_CTR1(i32 %9, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i32 %10)
  %12 = load %struct.vhpet*, %struct.vhpet** %4, align 8
  %13 = getelementptr inbounds %struct.vhpet, %struct.vhpet* %12, i32 0, i32 1
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** %13, align 8
  %15 = load i32, i32* %5, align 4
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i64 %16
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 1
  %19 = call i32 @callout_stop(i32* %18)
  %20 = load %struct.vhpet*, %struct.vhpet** %4, align 8
  %21 = getelementptr inbounds %struct.vhpet, %struct.vhpet* %20, i32 0, i32 1
  %22 = load %struct.TYPE_2__*, %struct.TYPE_2__** %21, align 8
  %23 = load i32, i32* %5, align 4
  %24 = sext i32 %23 to i64
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i64 %24
  %26 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %25, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  %28 = load i64, i64* %6, align 8
  %29 = icmp slt i64 %27, %28
  br i1 %29, label %30, label %39

30:                                               ; preds = %3
  %31 = load %struct.vhpet*, %struct.vhpet** %4, align 8
  %32 = getelementptr inbounds %struct.vhpet, %struct.vhpet* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 8
  %34 = load i32, i32* %5, align 4
  %35 = call i32 @VM_CTR1(i32 %33, i8* getelementptr inbounds ([50 x i8], [50 x i8]* @.str.1, i64 0, i64 0), i32 %34)
  %36 = load %struct.vhpet*, %struct.vhpet** %4, align 8
  %37 = load i32, i32* %5, align 4
  %38 = call i32 @vhpet_timer_interrupt(%struct.vhpet* %36, i32 %37)
  br label %39

39:                                               ; preds = %30, %3
  ret void
}

declare dso_local i32 @VM_CTR1(i32, i8*, i32) #1

declare dso_local i32 @callout_stop(i32*) #1

declare dso_local i32 @vhpet_timer_interrupt(%struct.vhpet*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
